<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareThatBill</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_login">Login</string>
    <string name="login_create_account">Create new account</string>
    <string name="title_activity_create_account">Create new account</string>
    <string name="login_hint_email">email</string>
    <string name="login_hint_password">password</string>
    <string name="login_wrong">Incorrect user or password</string>
    <string name="create_account_title">Create new Share that Bill account</string>
    <string name="create_account_email">Your email:</string>
    <string name="create_account_password">Password (minimum of 6 characters):</string>
    <string name="create_account_confirm_password">Confirm your password:</string>
    <string name="create_account_create">Create</string>
    <string name="create_account_hint_email">email</string>
    <string name="create_account_hint_password">password</string>
    <string name="create_account_hint_confirm_password">confirm password</string>
    <string name="create_account_warning_short_password">Password must have at least 6 characters</string>
    <string name="create_account_warning_passwords_not_match">Passwords do not match!</string>
    <string name="create_account_warning_account_created">Your account was created successfully!</string>
    <string name="warning_error">Error</string>
    <string name="warning_success">Success</string>
    <string name="warning_password_empty">password</string>
    <string name="warning_invalid_email">Invalid email format!</string>
    <string name="warning_loading">Loading</string>
    <string name="warning_group_name_invalid">Group name invalid!</string>
    <string name="warning_creating_account">Creating account</string>
    <string name="warning_creating_account_success">Account created successfully!</string>
    <string name="warning_creating_account_fail">Account creation failed</string>
    <string name="warning_creating_group_success">Group created successfully!</string>
    <string name="warning_creating_group_fail">Group creation failed</string>
    <string name="warning_creating_bill_fail_name">Invalid bill name.</string>
    <string name="warning_creating_bill_fail_total_match">Total paid amount does not match oweed amount.</string>
    <string name="warning_creating_bill_fail_total_zero">Total bill amount must be greater than zero.</string>
    <string name="warning_creating_bill_invalid_value">Invalid value</string>
    <string name="members_tab_warning_user_user_added">User already added.</string>
    <string name="members_tab_warning_user_already_on_group">User already added.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_title">Your groups:</string>
    <string name="profile_no_groups">You don\'t have any group.</string>
    <string name="profile_create_new_group">Create new group...</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="create_group_title">Create new group</string>
    <string name="create_group_group_name">Group name:</string>
    <string name="create_group_invite_members">Invite members:</string>
    <string name="create_group_edit_email">Edit email</string>
    <string name="create_group_email_hint">yourfriend@provider.net</string>
    <string name="create_group_create">Create group</string>
    <string name="create_group_add_new_member_title">Add new member</string>
    <string name="create_group_add_new_member_message">Type the user\'s email:</string>
    <string name="create_group_warning_email_already_added">Email already on invite list!</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="profile_create_group">Create new group:</string>
    <string name="tabs_add_text">Add: </string>
    <string name="tabs_members_add">Add new member: </string>
    <string name="tabs_bills_add">Add new bill: </string>
    <string name="members_tab_you">(you)</string>
    <string name="members_tab_add_member">Add new member</string>
    <string name="title_activity_view_bill">ViewBillActivity</string>
    <string name="view_bill_bill">Bill:</string>
    <string name="view_bill_total">Total: $</string>
    <string name="view_bill_date">Date: </string>
    <string name="view_bill_location">Location:</string>
    <string name="view_bill_picture">Picture:</string>
    <string name="view_bill_who_paid">Who paid:</string>
    <string name="view_bill_who_owes">Who owes:</string>
    <string name="view_bill_delete_bill">Delete bill</string>
    <string name="view_bill_delete_bill_question">Are you sure you want to delete this bill?</string>
    <string name="view_bill_bill_delete">Bill deleted</string>
    <string name="title_activity_create_bill">CreateBillActivity</string>
    <string name="create_bill_title">Create bill</string>
    <string name="create_bill_name">Bill name:</string>
    <string name="create_bill_date">Date:</string>
    <string name="create_bill_total_value">Total value:</string>
    <string name="create_bill_now">Now</string>
    <string name="create_bill_date_other">Other:</string>
    <string name="create_bill_time">Time:</string>
    <string name="create_bill_location">Location:</string>
    <string name="create_bill_picture">Picture:</string>
    <string name="create_bill_how_to_split">How will the value be split?</string>
    <string name="create_bill_equally">Equally (tap members that will share it)</string>
    <string name="create_bill_custom">Not equally (tap users to specify the amount)</string>
    <string name="create_bill_who_paid">Who paid?</string>
    <string name="create_bill_create">Create!</string>
    <string name="create_bill_set_date">Set date</string>
    <string name="create_bill_set_time">Set time</string>
    <string name="create_bill_set_location">Get current location</string>
    <string name="create_bill_set_picture">Take picture</string>
    <string name="create_bill_set_date_format">MM/DD/YYYY</string>
    <string name="create_bill_created">Bill successfully created.</string>
    <string name="create_bill_getting_location">Getting current location</string>
    <string name="create_bill_warning_location_disabled">Location services are disabled on this device. Do you want to enabled it?</string>
    <string name="create_bill_save">Save</string>
    <string name="create_bill_warning_picture_unavailable">No picture taken yet</string>
    <string name="create_bill_warning_bill_exists">A bill with this name already exists.</string>
    <string name="view_bill_check_map">Check map</string>
    <string name="view_bill_check_picture">Take a look</string>
    <string name="view_bill_no_picture">No picture attached</string>
    <string name="view_bill_warning_no_location">No location available for this bill</string>
    <string name="title_activity_notifications_tab">NotificationsTab</string>
    <string name="notification_adapter_bill_created">created the bill</string>
    <string name="notification_adapter_bill_edited">edited the bill</string>
    <string name="notification_adapter_bill_deleted">deleted the bill</string>
    <string name="notification_adapter_added">added</string>
    <string name="notification_adapter_to_the_group">to the group</string>
    <string name="notification_adapter_less_than_one_minute_ago">Less than a minute ago</string>
    <string name="notification_adapter_minutes_ago">minutes ago</string>
    <string name="notification_adapter_hours_ago">hours ago</string>
    <string name="notification_adapter_days_ago">days ago</string>
    <string name="notification_adapter_weeks_ago">weeks ago</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_remove">Remove</string>
</resources>
