<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context="com.mobapp.almaslira.sharethatbill.CreateAccountActivity"
    android:id="@+id/app_name">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_account_title"
        android:id="@+id/textViewProfileTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextCreateAccountEmail"
        android:layout_below="@+id/textViewProfileNoGroups"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/create_account_hint_email"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextCreateAccountPassword"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/create_account_hint_password"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextCreateAccountConfirmPassword"
        android:hint="@string/create_account_hint_confirm_password"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_create"
        android:id="@+id/buttonCreateAccountCreate"
        android:layout_below="@+id/editTextCreateAccountConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_account_email"
        android:id="@+id/textViewProfileNoGroups"
        android:layout_below="@+id/textViewProfileTitle"
        android:layout_alignLeft="@+id/textViewProfileTitle"
        android:layout_alignStart="@+id/textViewProfileTitle"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_account_password"
        android:id="@+id/textView3"
        android:layout_below="@+id/editTextCreateAccountEmail"
        android:layout_alignLeft="@+id/textViewProfileNoGroups"
        android:layout_alignStart="@+id/textViewProfileNoGroups"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_account_confirm_password"
        android:id="@+id/textView4"
        android:layout_below="@+id/editTextCreateAccountPassword"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
