<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_login"
        android:id="@+id/textViewLoginLogin"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_create_account"
        android:id="@+id/buttonLoginCreateAccount"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/buttonLoginLogin"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextLoginEmail"
        android:layout_below="@+id/textViewLoginLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/login_hint_email"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextLoginPassword"
        android:layout_below="@+id/editTextLoginEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/login_hint_password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_login"
        android:id="@+id/buttonLoginLogin"
        android:layout_below="@+id/editTextLoginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:color/background_dark"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:shadowColor="#ffff0061" />


</RelativeLayout>
