<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mobapp.almaslira.sharethatbill.ViewBillActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/view_bill_bill"
        android:id="@+id/textViewViewBillTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollViewViewBill"
        android:layout_below="@+id/textViewViewBillTitle"
        android:layout_centerHorizontal="true"
        android:fillViewport="false"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/textViewViewBillTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/view_bill_total" />

            <TextView
                android:id="@+id/textViewViewBillDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/view_bill_date"
                android:layout_below="@+id/textViewViewBillTotal"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/textViewViewBillLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/view_bill_location"
                android:layout_below="@+id/textViewViewBillDate"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_bill_check_map"
                android:id="@+id/buttonSeeMap"
                android:layout_toEndOf="@+id/textViewViewBillLocation"
                android:layout_below="@+id/textViewViewBillDate"
                android:layout_toRightOf="@+id/textViewViewBillLocation"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/view_bill_picture"
                android:id="@+id/textViewViewBillPicture"
                android:layout_below="@+id/textViewViewBillLocation"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPicture"
                android:layout_toEndOf="@+id/textViewViewBillPicture"
                android:layout_alignTop="@+id/textViewViewBillPicture"
                android:layout_alignLeft="@+id/buttonSeeMap"
                android:layout_alignStart="@+id/buttonSeeMap"
                android:layout_marginTop="-12dp"
                android:text="@string/view_bill_check_picture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/view_bill_who_paid"
                android:id="@+id/textViewWhoPaid"
                android:layout_below="@+id/textViewViewBillPicture"


                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"/>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listViewViewBillWhoPaid"
                android:layout_below="@+id/textViewWhoPaid"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/view_bill_who_owns"
                android:id="@+id/textViewViewBillWhoOwns"
                android:layout_below="@+id/listViewViewBillWhoPaid"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listViewViewBillWhoOwns"
                android:layout_below="@+id/textViewViewBillWhoOwns"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
