<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mobapp.almaslira.sharethatbill.CreateBillActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_bill_title"
        android:id="@+id/textViewCreateBillTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollViewViewBill"
        android:layout_below="@+id/textViewViewBillTitle"
        android:layout_centerHorizontal="true"
        android:fillViewport="false"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/create_bill_name"
                android:id="@+id/textViewCreateBillName"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextCreateBillBillName"
                android:layout_below="@+id/textViewCreateBillName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/create_bill_date"
                android:id="@+id/textViewCreateBillDate"
                android:layout_below="@+id/editTextCreateBillBillName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <!--
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePickerCreateBillDate"
                android:layout_below="@+id/textViewCreateBillDate" />
            -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/create_bill_time"
                android:id="@+id/textViewCreateBillTime"
                android:layout_below="@+id/textViewCreateBillDate"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <!--
            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timePickerCreateBillTime"
                android:layout_below="@+id/textViewCreateBillTime"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/create_bill_location"
                android:id="@+id/textViewCreateBillLocation"
                android:layout_below="@+id/textViewCreateBillTime"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/create_bill_picture"
                android:id="@+id/textViewCreateBillPicture"
                android:layout_below="@+id/textViewCreateBillLocation"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/create_bill_how_to_split"
                android:id="@+id/textViewCreateBillHowToSplit"
                android:layout_below="@+id/textViewCreateBillPicture"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/textViewCreateBillHowToSplit"
                android:layout_alignBottom="@+id/textViewCreateBillHowToSplit"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="202dp"
                android:id="@+id/RadioGroupSplit">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_bill_equaly"
                    android:id="@+id/radioButtonEqualy"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_bill_custom"
                    android:id="@+id/radioButtonCustom"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:checked="false" />
                </RadioGroup>




        </RelativeLayout>.
    </ScrollView>

</RelativeLayout>
