<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.mobapp.almaslira.sharethatbill.CreateGroupActivity"
                android:id="@+id/CreateGroup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_group_title"
        android:id="@+id/textViewCreateNewGroup"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_group_group_name"
        android:id="@+id/textViewGroupTitle"
        android:layout_below="@+id/textViewCreateNewGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCreateGroupName"
        android:layout_below="@+id/textViewGroupTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_group_invite_members"
        android:id="@+id/textViewCreateGroupInviteMembers"
        android:layout_below="@+id/buttonCreateGroupCreate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextCreateGroupAddEmail"
        android:layout_below="@+id/textViewCreateGroupInviteMembers"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewCreateNewGroup"
        android:layout_alignEnd="@+id/textViewCreateNewGroup"
        android:hint="@string/create_group_email_hint" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonCreateGroupAdd"
        android:layout_alignBottom="@+id/editTextCreateGroupAddEmail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scaleType="centerInside"
        android:src="@drawable/add_button"
        android:layout_alignTop="@+id/editTextCreateGroupAddEmail"
        android:layout_toRightOf="@+id/editTextCreateGroupAddEmail"
        android:layout_toEndOf="@+id/editTextCreateGroupAddEmail"
        android:background="@null" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewCreateGroupMembers"
        android:fadeScrollbars="false"
        android:layout_below="@+id/editTextCreateGroupAddEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group_create"
        android:id="@+id/buttonCreateGroupCreate"
        android:layout_below="@+id/editTextCreateGroupName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />
</RelativeLayout>
