<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mobapp.almaslira.sharethatbill.ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_title"
        android:id="@+id/textViewProfileTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listViewProfileGroups"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textViewAddGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_create_group"
        android:id="@+id/textViewAddGroup"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/textViewProfileTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonProfileCreateGroup"
        android:scaleType="fitCenter"
        android:src="@drawable/add_button"
        android:maxHeight="20dp"
        android:layout_toEndOf="@+id/textViewProfileTitle"
        android:layout_above="@+id/listViewProfileGroups"
        android:layout_toRightOf="@+id/textViewProfileTitle"
        android:layout_alignTop="@+id/textViewAddGroup"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="-10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_no_groups"
        android:id="@+id/textView"
        android:layout_toStartOf="@+id/imageButtonProfileCreateGroup"
        android:layout_below="@+id/imageButtonProfileCreateGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>
</RelativeLayout>
